syntax = "proto3";

package api;

option go_package = "publisher_subscriber/proto/gen/go;pubsub_v1";

import "google/protobuf/empty.proto";

service PubSub {
  rpc Subscribe(SubscribeRequest) returns (stream Event);
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
  string key = 1;
}

message PublishRequest {
  string key = 1;
  string data = 2;
}

message Event {
  string data = 1;
}


//protoc -I protos/proto protos/proto/pubsub.proto --go_out=protos/gen/go --go_opt=paths=source_relative --go-grpc_out=protos/gen/go --go-grpc_opt=paths=source_relative